--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -1,37 +1,11 @@
+# https://taskfile.dev
+
 version: "3"
 
 vars:
-  SKILL_DIR: skills/nullables
   INSTALL_DIR: ~/.claude/skills
 
 tasks:
-  install:
-    desc: Install the nullables skill to ~/.claude/skills
-    cmds:
-      - mkdir -p {{.INSTALL_DIR}}
-      - cp -r {{.SKILL_DIR}} {{.INSTALL_DIR}}/nullables
-      - echo "Installed nullables skill to {{.INSTALL_DIR}}/nullables"
-
-  install-dev:
-    desc: Symlink the skill for development (changes reflect immediately)
-    cmds:
-      - mkdir -p {{.INSTALL_DIR}}
-      - rm -rf {{.INSTALL_DIR}}/nullables
-      - ln -s "$(pwd)/{{.SKILL_DIR}}" {{.INSTALL_DIR}}/nullables
-      - echo "Symlinked {{.INSTALL_DIR}}/nullables -> $(pwd)/{{.SKILL_DIR}}"
-
-  uninstall:
-    desc: Remove the skill from ~/.claude/skills
-    cmds:
-      - rm -rf {{.INSTALL_DIR}}/nullables
-      - echo "Removed nullables skill"
-
-  list:
-    desc: List all files in the skill
-    cmds:
-      - echo "Files in nullables skill:"
-      - find {{.SKILL_DIR}} -type f | sort
-
   validate:
     desc: Validate the skill structure
     cmds:
@@ -45,3 +19,31 @@ tasks:
           exit 1
         fi
         echo "Skill structure is valid"
+
+  sc:update:
+    desc: Update the skill-creator package in ~/.claude from https://github.com/anthropics/skills/tree/main/skills/skill-creator
+    cmds:
+      - |
+        TMPDIR=$(mktemp -d)
+        trap 'rm -rf "$TMPDIR"' EXIT
+        git clone --depth 1 --filter=blob:none --sparse \
+          https://github.com/anthropics/skills.git "$TMPDIR"
+        cd "$TMPDIR"
+        git sparse-checkout set skills/skill-creator
+        rm -rf ~/.claude/skills/skill-creator
+        cp -r skills/skill-creator ~/.claude/skills/skill-creator
+        echo "Updated skill-creator from upstream"
+
+  install:
+    desc: Symlink the skill for development (changes reflect immediately)
+    cmds:
+      - |
+        SKILL_DIR=$(find . -type d -iname '*skill*' | fzf)
+        test -z "$SKILL_DIR" && echo "Error: No skill selected" && exit 1
+        SKILL_NAME=$(basename $(dirname "$SKILL_DIR"))
+        SKILL_PATH="$(pwd)/{{.SKILL_DIR}}"
+        test -f "$SKILL_PATH" || echo "Error: $SKILL_PATH is not a file" && exit 1
+        echo "SKILL_DIR=$SKILL_DIR  SKILL_NAME=$SKILL_NAME"
+        mkdir -p {{.INSTALL_DIR}}
+        rm -irf {{.INSTALL_DIR}}/$SKILL_NAME
+        ln -s "$SKILL_PATH" {{.INSTALL_DIR}}/$SKILL_NAME
